--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time, Space, and Complexity</h1>
+
+	<p>
+		 Time complexity is a measure of how the execution time of an algorithm increases with the size of input data. Efficient algorithms aim to reduce time complexity to improve performance and handle larger datasets effectively.
+	</p>
+
+	<p>
+		<b>Space Complexity</b> refers to the amount of memory an algorithm uses relative to the input size. It is often expressed as O(n), where n is the size of the input, to indicate how the required memory grows as the input increases.
+	</p>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
