--- a/main.html
+++ b/main.html
@@ -4,11 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Time and Space Complexity</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Time, Space, and Complexity</h1>
+	<h1>Time, Space,Complexity</h1>
 
 	<p>
 		 Time complexity is a measure of how the execution time of an algorithm increases with the size of input data. Efficient algorithms aim to reduce time complexity to improve performance and handle larger datasets effectively.
