--- a/main.html
+++ b/main.html
@@ -4,21 +4,22 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<title>Time and Space Complexity</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Time, Space,Complexity</h1>
+	
+    <h1>Time, Space, and Complexity</h1>
 
-	<p>
-		 Time complexity is a measure of how the execution time of an algorithm increases with the size of input data. Efficient algorithms aim to reduce time complexity to improve performance and handle larger datasets effectively.
-	</p>
+    <p>
+        Time complexity measures the amount of time an algorithm takes to run as a function of the size of its input. 
+        A more efficient algorithm has lower time complexity.
+    </p>
 
-	<p>
-		<b>Space Complexity</b> refers to the amount of memory an algorithm uses relative to the input size. It is often expressed as O(n), where n is the size of the input, to indicate how the required memory grows as the input increases.
-	</p>
-
+    <p>
+        <b>Space Complexity</b> refers to the amount of memory an algorithm uses relative to the input size. 
+        It is often expressed as O(n), where n is the size of the input.
+    </p>
 	
     <script type="text/javascript" src="./script.js">
 </script>
